# fuel-asset-standard

./: .gitignore  Cargo.toml  Forc.toml  LICENSE  README.md
contracts/fungible/: Forc.toml
contracts/fungible-abi/: Forc.toml
contracts/fungible-abi/src/: fungible_abi.sw
contracts/fungible/src/: errors.sw  main.sw
src/: fungible_abi.sw  main.sw
src/fungible/: Forc.toml
src/fungible/src/: fungible_abi.sw  main.sw
src/nft/: Forc.toml
src/nft/src/: main.sw
test/: harness.rs
test/fungible/: main.rs
test/utils/: main.rs  mod.rs  numbers.rs
tests/: harness.rs
tests/fungible/: main.rs  utils.rs
