[package]
name = "fuel-token-standard"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["@vandhazel"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.35", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "test"
path = "test/harness.rs"